test/deca/context/valid/declaration.deca
{
    int x = 2;
    float f = 2.6f;
    boolean b = false;
}