test/deca/context/invalid/declaration.deca
// Description:
//    type inconnu
//
// Résultat :
// Ligne 8 :  types inconnu

{
    afloat f = 2.6f;
}
